# hexBlocker

./: .gitattributes  .gitignore  CMakeLists.txt  CreateBlockWidget.cpp  CreateBlockWidget.h  CreateBlockWidget.ui  HexBC.cpp  HexBC.h  HexBlock.cpp  HexBlock.h  HexBlocker.cpp  HexBlocker.h  HexEdge.cpp  HexEdge.h  HexExporter.cpp  HexExporter.h  HexPatch.cpp  HexPatch.h  HexReader.cpp  HexReader.h  InteractorStyleEdgePick.cpp  InteractorStyleEdgePick.h  InteractorStylePatchPick.cpp  InteractorStylePatchPick.h  InteractorStyleVertPick.cpp  InteractorStyleVertPick.h  LICENSE  MainWindow.cxx  MainWindow.h  MainWindow.ui  MoveVerticesWidget.cpp  MoveVerticesWidget.h  MoveVerticesWidget.ui  README-install.txt  README.md  SetBCsItem.cpp  SetBCsItem.h  SetBCsWidget.cpp  SetBCsWidget.h  SetBCsWidget.ui  (+8 more)
Icons/: icons.qrc
examples/: Krasches-when-28-31-21-20-is-extruded-and-merged  offsetCylinder_out  testEdgesType
images/: HexEdge_calcArcPoint.ggb  HexEdge_calcArcPoint_prescribed_radius.ggb  HexEdge_calcParameterArc.ggb
src/: CMakeLists.txt  CreateBlockWidget.cpp  CreateBlockWidget.h  EdgePropsWidget.cpp  EdgePropsWidget.h  EdgePropsWidget.ui  EdgeSetTypeWidget.cpp  EdgeSetTypeWidget.h  EdgeSetTypeWidget.ui  Geometry.cpp  GradingCalculatorDialog.cpp  GradingCalculatorDialog.h  GradingCalculatorDialog.ui  HexBC.cpp  HexBC.h  HexBlock.cpp  HexBlock.h  HexBlocker.cpp  HexBlocker.h  HexEdge.cpp  HexEdge.h  HexExporter.cpp  HexPatch.cpp  HexPatch.h  HexReader.cpp  HexReader.h  InteractorStyleActorPick.cpp  InteractorStyleActorPick.h  InteractorStyleVertPick.cpp  InteractorStyleVertPick.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MoveVerticesWidget.h  MoveVerticesWidget.ui  PointsTableModel.cpp  PointsTableModel.h  RotateVerticesWidget.cpp  RotateVerticesWidget.h  RotateVerticesWidget.ui  (+11 more)
src/Icons/: icons.qrc
